# actor-model-arch

./: Cargo.toml  README.md  prompt.md
src/: audio_player.rs  code_writer.rs  embedding.rs  initial_prompt.md  interpreter.rs  llm.rs  main.rs  stt.rs  token_processor.rs  tts.rs  tts_polly.rs  vectordb_qdrant.rs
