[package]
name = "actor-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
async-openai = "0.10.3"
aws-config = "0.55.2"
aws-sdk-polly = "0.27.0"
cpal = "0.15.2"
futures = "0.3.28"
qdrant-client = "1.1.2"
reqwest = { version = "0.11.17", features = ["json"] }
rodio = "0.17.1"
rubato = "0.12.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = "1.28.0"
whisper-rs = "0.5.0"
